# HomeMatch

./: Makefile  README.md  app.py  pyproject.toml  requirements.txt
.src/listings/: listings_docs
listings/: main.py  pyproject.toml
notebooks/: README.md  home_match.ipynb  listings.ipynb
notebooks/chroma_db/: chroma.sqlite3
notebooks/db/listings_chroma/: chroma.sqlite3
notebooks/listings/: listings.json
src/: config.py  main.py  pyproject.toml
src/chains/: full_chain.py  query_cleaning.py  rag_chain.py
src/frontend/config/: uiconfig.ini  uiconfig.py
src/frontend/streamlit/: display_streamlit.py  load_streamlit_ui.py
src/listings/: generate_listings.py
src/listings/docs/: listings.json
src/llm_parsers/: buyer_preferences.py  listing_parser.py
src/llms/: groqllm.py
src/notebooks/: home_match.ipynb  listings.ipynb  listings.json
src/notebooks/db/listings_chroma/: chroma.sqlite3
src/prompt_templates/: listing_prompt.py  query_cleaning_prompt.py  rag_prompt.py
src/tools/chromadb/: chroma.sqlite3  chroma_store.py
src/tools/chromadb/c74d5482-b609-4e63-9353-ebe317dba93d/: index_metadata.pickle
